samples/_failures_safe/1761391324_137f79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27dd50ca.c: In function ‘main’:
./samples/SAFE/__tmp_27dd50ca.c:154:12: error: missing terminating " character
  154 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_27dd50ca.c:154:5: error: expected expression at end of input
  154 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_27dd50ca.c:154:5: error: expected declaration or statement at end of input
